[package]
name = "marbles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
comfy-table = "6.1.4"
dirs = "4.0.0"
indicatif = "0.17.3"
rand = "0.8.5"
