[package]
name = "marbles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
comfy-table = "6.1.4"
crossterm = "0.26.0"
dirs = "4.0.0"
rand = "0.8.5"
strsim = "0.10.0"
